Define NN Params

--- a/predictor.ipynb
+++ b/predictor.ipynb
@@ -2,18 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
-      "daal4py 2021.3.0 requires daal==2021.2.3, which is not installed.\n",
-      "conda-repo-cli 1.0.4 requires pathlib, which is not installed.\n",
-      "anaconda-project 0.10.1 requires ruamel-yaml, which is not installed.\n",
-      "numba 0.54.1 requires numpy<1.21,>=1.17, but you have numpy 2.0.2 which is incompatible.\u001b[0m\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -24,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -717,7 +712,7 @@
        "[20 rows x 22 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -728,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -919,7 +914,7 @@
        "[153 rows x 8 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -930,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -991,7 +986,7 @@
        "18  -942.844482    71.631927      19         162.146989  3844.927248, rotation=0.0)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1002,7 +997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -1019,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1028,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -1037,7 +1032,7 @@
        "fastf1.core.Laps"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1048,7 +1043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -1067,7 +1062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -1086,7 +1081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -1095,7 +1090,7 @@
        "RangeIndex(start=0, stop=0, step=1)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1107,7 +1102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -1116,7 +1111,7 @@
        "2024 Season Round 15: Dutch Grand Prix - Race"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1127,7 +1122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -1144,7 +1139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -1153,7 +1148,7 @@
        "2021 Season Round 2: Emilia Romagna Grand Prix - Race"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1164,7 +1159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -1220,7 +1215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1229,7 +1224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -1615,7 +1610,7 @@
        "[1127 rows x 31 columns]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1626,7 +1621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -1683,7 +1678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -1838,7 +1833,7 @@
        "[181 rows x 5 columns]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1849,7 +1844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1858,7 +1853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -1910,7 +1905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -2535,7 +2530,7 @@
        "[20 rows x 22 columns]"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2546,7 +2541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -2559,7 +2554,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2570,7 +2565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -2599,7 +2594,7 @@
        "Name: GridPosition, dtype: float64"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2610,7 +2605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2622,6 +2617,28 @@
     "    \"OCO\": 95.682128\n",
     "}"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# KERAS NN CONSTRUCTION:  functional API\n",
+    "# The Functional API, which is an easy-to-use, fully-featured API that supports arbitrary model architectures. For most people and most use cases, this is what you should be using. This is the Keras \"industry strength\" model.\n",
+    "\n",
+    "# KERAS NN CONSTRUCTION: The sequential feedforward network is build using keras_model_sequential() with dense layers. model_1_ANN is built with 1 hidden layer, 5 neurons, 17 predictor variables, and 1 output layer. The activation function used is ReLU - rectified linear unit.\n",
+    "\n",
+    "#model_1_ANN, ran with a mini-batch gradient descent size of 32 and the epoch hyperparameter set to 100. The validation data is set to 20% of the training data\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
