--- a/dutch_gp_prediction.ipynb
+++ b/dutch_gp_prediction.ipynb
@@ -5504,7 +5504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -5518,9 +5518,9 @@
       "\n",
       "PREDICTED 2025 ZANDVOORT PODIUM\n",
       "===============================\n",
-      "P1: PIA - 160153859764.430s\n",
-      "P2: NOR - 160153859764.852s\n",
-      "P3: HAD - 160153859766.680s\n",
+      "🥇 P1: PIA - 160153859764.430s\n",
+      "🥈 P2: NOR - 160153859764.852s\n",
+      "🥉 P3: HAD - 160153859766.680s\n",
       "\n",
       "Full Results:\n",
       "  Driver  Predicted_LapTime\n",
@@ -5564,9 +5564,9 @@
     "# Get top 3 fastest \n",
     "print(\"\\nPREDICTED 2025 ZANDVOORT PODIUM\")\n",
     "print(\"===============================\")\n",
-    "print(f\"P1: {results_df.iloc[0]['Driver']} - {results_df.iloc[0]['Predicted_LapTime']:.3f}s\")\n",
-    "print(f\"P2: {results_df.iloc[1]['Driver']} - {results_df.iloc[1]['Predicted_LapTime']:.3f}s\") \n",
-    "print(f\"P3: {results_df.iloc[2]['Driver']} - {results_df.iloc[2]['Predicted_LapTime']:.3f}s\")\n",
+    "print(f\"🥇 P1: {results_df.iloc[0]['Driver']} - {results_df.iloc[0]['Predicted_LapTime']:.3f}s\")\n",
+    "print(f\"🥈 P2: {results_df.iloc[1]['Driver']} - {results_df.iloc[1]['Predicted_LapTime']:.3f}s\") \n",
+    "print(f\"🥉 P3: {results_df.iloc[2]['Driver']} - {results_df.iloc[2]['Predicted_LapTime']:.3f}s\")\n",
     "\n",
     "print(\"\\nFull Results:\")\n",
     "print(results_df.head(10))"
