Update predictions 5 pm SGT

--- a/dutch_gp_prediction.ipynb
+++ b/dutch_gp_prediction.ipynb
@@ -4866,7 +4866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -5147,15 +5147,15 @@
        "      <th>10</th>\n",
        "      <td>VER</td>\n",
        "      <td>7</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>-4.5</td>\n",
        "      <td>2</td>\n",
        "      <td>2025</td>\n",
        "      <td>1</td>\n",
        "      <td>69.925</td>\n",
        "      <td>0.953</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>False</td>\n",
        "      <td>21.0</td>\n",
        "      <td>1008.0</td>\n",
@@ -5166,7 +5166,7 @@
        "      <td>7</td>\n",
        "      <td>12.0</td>\n",
        "      <td>11.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>4.5</td>\n",
        "      <td>2</td>\n",
        "      <td>2025</td>\n",
        "      <td>1</td>\n",
@@ -5329,7 +5329,7 @@
        "7           HAD               6           4.0               3.0   \n",
        "8           SAI               9           9.0               8.0   \n",
        "9           ALB               9          15.0              14.0   \n",
-       "10          VER               7           NaN               NaN   \n",
+       "10          VER               7           3.0               2.0   \n",
        "11          TSU               7          12.0              11.0   \n",
        "12          ALO               1          10.0               9.0   \n",
        "13          STR               1          20.0              19.0   \n",
@@ -5351,8 +5351,8 @@
        "7                -2.0             2  2025             1                70.166   \n",
        "8                -3.0             2  2025             1                69.913   \n",
        "9                 3.0             2  2025             1                70.099   \n",
-       "10                0.0             2  2025             1                69.925   \n",
-       "11                0.0             2  2025             1                70.349   \n",
+       "10               -4.5             2  2025             1                69.925   \n",
+       "11                4.5             2  2025             1                70.349   \n",
        "12               -5.0             2  2025             1                69.977   \n",
        "13                5.0             2  2025             1                70.103   \n",
        "14                0.5             2  2025             1                70.595   \n",
@@ -5373,7 +5373,7 @@
        "7                     1.194                     6.0  False     21.0    1008.0  \n",
        "8                     0.941                    -5.0  False     21.0    1008.0  \n",
        "9                     1.127                    -7.0  False     21.0    1008.0  \n",
-       "10                    0.953                     NaN  False     21.0    1008.0  \n",
+       "10                    0.953                     2.0  False     21.0    1008.0  \n",
        "11                    1.377                     0.0  False     21.0    1008.0  \n",
        "12                    1.005                    -3.0  False     21.0    1008.0  \n",
        "13                    1.131                   -11.0  False     21.0    1008.0  \n",
@@ -5385,7 +5385,7 @@
        "19                    1.985                     3.0  False     21.0    1008.0  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5442,7 +5442,8 @@
     "    'BOR': 13.0,       \n",
     "    'HUL': 17.0,\n",
     "    'GAS': 14.0,\n",
-    "    'COL': 16.0  \n",
+    "    'COL': 16.0,  \n",
+    "    'VER': 3.0\n",
     "}\n",
     "\n",
     "\n",
@@ -5480,7 +5481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -5493,7 +5494,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5504,36 +5505,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Feature alignment check:\n",
-      "Training: ['GridPosition', 'Grid_Gap_to_Pole', 'Quali_vs_Teammate', 'Year', 'CleanAirPace_seconds', 'Practice_Gap_to_Fastest', 'Practice_vs_Quali_Rank', 'AirTemp', 'Pressure', 'Rain', 'Is_Zandvoort', 'TeamId_encoded', 'Race_encoded']\n",
-      "Prediction: ['GridPosition', 'Grid_Gap_to_Pole', 'Quali_vs_Teammate', 'Year', 'CleanAirPace_seconds', 'Practice_Gap_to_Fastest', 'Practice_vs_Quali_Rank', 'AirTemp', 'Pressure', 'Rain', 'Is_Zandvoort', 'TeamId_encoded', 'Race_encoded']\n",
-      "Match: True\n",
+      "PREDICTIONS\n",
+      "[ 87.28579464  87.68301637  93.64218366  92.98275325  91.33846325\n",
+      "  94.17715083  91.21075966  89.5937092   92.42175775  94.95304012\n",
+      "  89.13151849  92.94628062  99.33740614 103.39320983 103.61284248\n",
+      " 103.30407124  96.38587833  98.06871588 101.93159974 102.68997525]\n",
       "\n",
       "PREDICTED 2025 ZANDVOORT PODIUM\n",
       "===============================\n",
-      "🥇 P1: PIA - 160153859764.430s\n",
-      "🥈 P2: NOR - 160153859764.852s\n",
-      "🥉 P3: HAD - 160153859766.680s\n",
+      "🥇 P1: PIA - 87.28579463956976s\n",
+      "🥈 P2: NOR - 87.68301637133004s\n",
+      "🥉 P3: VER - 89.13151849276733s\n",
       "\n",
       "Full Results:\n",
-      "  Driver  Predicted_LapTime\n",
-      "0    PIA       1.601539e+11\n",
-      "1    NOR       1.601539e+11\n",
-      "7    HAD       1.601539e+11\n",
-      "6    LAW       1.601539e+11\n",
-      "4    RUS       1.601539e+11\n",
-      "8    SAI       1.601539e+11\n",
-      "3    LEC       1.601539e+11\n",
-      "2    HAM       1.601539e+11\n",
-      "5    ANT       1.601539e+11\n",
-      "9    ALB       1.601539e+11\n"
+      "   Driver  Predicted_LapTime\n",
+      "0     PIA          87.285795\n",
+      "1     NOR          87.683016\n",
+      "10    VER          89.131518\n",
+      "7     HAD          89.593709\n",
+      "6     LAW          91.210760\n",
+      "4     RUS          91.338463\n",
+      "8     SAI          92.421758\n",
+      "11    TSU          92.946281\n",
+      "3     LEC          92.982753\n",
+      "2     HAM          93.642184\n"
      ]
     }
    ],
@@ -5543,18 +5545,22 @@
     "                'CleanAirPace_seconds', 'Practice_Gap_to_Fastest', 'Practice_vs_Quali_Rank', \n",
     "                'AirTemp', 'Pressure', 'Rain', 'Is_Zandvoort', 'TeamId_encoded', 'Race_encoded']\n",
     "\n",
+    "\n",
     "X_predict = predict_df[feature_order]\n",
     "\n",
     "# Handle missing values\n",
     "X_predict = X_predict.fillna(0)\n",
     "\n",
-    "print(\"Feature alignment check:\")\n",
-    "print(\"Training:\", list(X.columns))\n",
-    "print(\"Prediction:\", list(X_predict.columns))\n",
-    "print(\"Match:\", list(X.columns) == list(X_predict.columns))\n",
+    "# print(\"Feature alignment check:\")\n",
+    "# print(\"Training:\", list(X.columns))\n",
+    "# print(\"Prediction:\", list(X_predict.columns))\n",
+    "# print(\"Match:\", list(X.columns) == list(X_predict.columns))\n",
     "\n",
     "#Make Predictions\n",
-    "predicted_lap_times = lr_model.predict(X_predict)\n",
+    "predicted_lap_times = ridge_model.predict(X_predict)\n",
+    "\n",
+    "print(\"PREDICTIONS\")\n",
+    "print(predicted_lap_times)\n",
     "\n",
     "results_df = pd.DataFrame({\n",
     "    'Driver': predict_df['Abbreviation'],\n",
@@ -5564,13 +5570,45 @@
     "# Get top 3 fastest \n",
     "print(\"\\nPREDICTED 2025 ZANDVOORT PODIUM\")\n",
     "print(\"===============================\")\n",
-    "print(f\"🥇 P1: {results_df.iloc[0]['Driver']} - {results_df.iloc[0]['Predicted_LapTime']:.3f}s\")\n",
-    "print(f\"🥈 P2: {results_df.iloc[1]['Driver']} - {results_df.iloc[1]['Predicted_LapTime']:.3f}s\") \n",
-    "print(f\"🥉 P3: {results_df.iloc[2]['Driver']} - {results_df.iloc[2]['Predicted_LapTime']:.3f}s\")\n",
+    "print(f\"🥇 P1: {results_df.iloc[0]['Driver']} - {results_df.iloc[0]['Predicted_LapTime']}s\")\n",
+    "print(f\"🥈 P2: {results_df.iloc[1]['Driver']} - {results_df.iloc[1]['Predicted_LapTime']}s\") \n",
+    "print(f\"🥉 P3: {results_df.iloc[2]['Driver']} - {results_df.iloc[2]['Predicted_LapTime']}s\")\n",
     "\n",
     "print(\"\\nFull Results:\")\n",
     "print(results_df.head(10))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 87.28579464,  87.68301637,  93.64218366,  92.98275325,\n",
+       "        91.33846325,  94.17715083,  91.21075966,  89.5937092 ,\n",
+       "        92.42175775,  94.95304012,  89.13151849,  92.94628062,\n",
+       "        99.33740614, 103.39320983, 103.61284248, 103.30407124,\n",
+       "        96.38587833,  98.06871588, 101.93159974, 102.68997525])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ridge_prediction=ridge_model.predict(X_predict)\n",
+    "ridge_prediction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
