FINAL MONZA PREDICTIONS

--- a/monza_prediction.ipynb
+++ b/monza_prediction.ipynb
@@ -5124,7 +5124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -5144,17 +5144,17 @@
       "🥉 P3: LEC - 90.17332995328934s\n",
       "\n",
       "Full Results:\n",
-      "   Driver  Predicted_LapTime\n",
-      "1     NOR          89.971372\n",
-      "0     PIA          90.010969\n",
-      "3     LEC          90.173330\n",
-      "10    VER          90.488904\n",
-      "2     HAM          90.608830\n",
-      "4     RUS          90.707443\n",
-      "5     ANT          91.095372\n",
-      "16    BOR          91.212517\n",
-      "12    ALO          91.520846\n",
-      "11    TSU          91.553924\n"
+      "  Driver  Predicted_LapTime\n",
+      "0    NOR          89.971372\n",
+      "1    PIA          90.010969\n",
+      "2    LEC          90.173330\n",
+      "3    VER          90.488904\n",
+      "4    HAM          90.608830\n",
+      "5    RUS          90.707443\n",
+      "6    ANT          91.095372\n",
+      "7    BOR          91.212517\n",
+      "8    ALO          91.520846\n",
+      "9    TSU          91.553924\n"
      ]
     }
    ],
@@ -5196,6 +5196,7 @@
     "print(f\"🥉 P3: {results_df.iloc[2]['Driver']} - {results_df.iloc[2]['Predicted_LapTime']}s\")\n",
     "\n",
     "print(\"\\nFull Results:\")\n",
+    "results_df.reset_index(drop=True, inplace=True)\n",
     "print(results_df.head(10))"
    ]
   },
