--- a/monza_prediction.ipynb
+++ b/monza_prediction.ipynb
@@ -4397,7 +4397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -4567,16 +4567,16 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>HAM</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>0.5</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>3.0</td>\n",
        "      <td>11</td>\n",
        "      <td>2</td>\n",
        "      <td>2025</td>\n",
        "      <td>1</td>\n",
        "      <td>79.598</td>\n",
        "      <td>0.267</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>-3.0</td>\n",
        "      <td>False</td>\n",
        "      <td>27.0</td>\n",
        "      <td>44.0</td>\n",
@@ -4588,7 +4588,7 @@
        "      <td>LEC</td>\n",
        "      <td>4.0</td>\n",
        "      <td>3.0</td>\n",
-       "      <td>-0.5</td>\n",
+       "      <td>-3.0</td>\n",
        "      <td>11</td>\n",
        "      <td>2</td>\n",
        "      <td>2025</td>\n",
@@ -4605,8 +4605,8 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>RUS</td>\n",
-       "      <td>6.0</td>\n",
        "      <td>5.0</td>\n",
+       "      <td>4.0</td>\n",
        "      <td>-0.5</td>\n",
        "      <td>11</td>\n",
        "      <td>5</td>\n",
@@ -4614,7 +4614,7 @@
        "      <td>1</td>\n",
        "      <td>79.515</td>\n",
        "      <td>0.184</td>\n",
-       "      <td>-1.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>False</td>\n",
        "      <td>27.0</td>\n",
        "      <td>44.0</td>\n",
@@ -4624,8 +4624,8 @@
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>ANT</td>\n",
-       "      <td>7.0</td>\n",
        "      <td>6.0</td>\n",
+       "      <td>5.0</td>\n",
        "      <td>0.5</td>\n",
        "      <td>11</td>\n",
        "      <td>5</td>\n",
@@ -4633,7 +4633,7 @@
        "      <td>1</td>\n",
        "      <td>79.696</td>\n",
        "      <td>0.365</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>3.0</td>\n",
        "      <td>False</td>\n",
        "      <td>27.0</td>\n",
        "      <td>44.0</td>\n",
@@ -4721,7 +4721,7 @@
        "      <td>VER</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>-4.5</td>\n",
+       "      <td>-4.0</td>\n",
        "      <td>11</td>\n",
        "      <td>7</td>\n",
        "      <td>2025</td>\n",
@@ -4738,16 +4738,16 @@
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>TSU</td>\n",
-       "      <td>10.0</td>\n",
        "      <td>9.0</td>\n",
-       "      <td>4.5</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>4.0</td>\n",
        "      <td>11</td>\n",
        "      <td>7</td>\n",
        "      <td>2025</td>\n",
        "      <td>1</td>\n",
        "      <td>80.059</td>\n",
        "      <td>0.728</td>\n",
-       "      <td>5.0</td>\n",
+       "      <td>6.0</td>\n",
        "      <td>False</td>\n",
        "      <td>27.0</td>\n",
        "      <td>44.0</td>\n",
@@ -4757,16 +4757,16 @@
        "    <tr>\n",
        "      <th>12</th>\n",
        "      <td>ALO</td>\n",
-       "      <td>9.0</td>\n",
        "      <td>8.0</td>\n",
-       "      <td>-4.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>-4.5</td>\n",
        "      <td>11</td>\n",
        "      <td>1</td>\n",
        "      <td>2025</td>\n",
        "      <td>1</td>\n",
        "      <td>79.861</td>\n",
        "      <td>0.530</td>\n",
-       "      <td>3.0</td>\n",
+       "      <td>4.0</td>\n",
        "      <td>False</td>\n",
        "      <td>27.0</td>\n",
        "      <td>44.0</td>\n",
@@ -4778,7 +4778,7 @@
        "      <td>STR</td>\n",
        "      <td>17.0</td>\n",
        "      <td>16.0</td>\n",
-       "      <td>4.0</td>\n",
+       "      <td>4.5</td>\n",
        "      <td>11</td>\n",
        "      <td>1</td>\n",
        "      <td>2025</td>\n",
@@ -4833,16 +4833,16 @@
        "    <tr>\n",
        "      <th>16</th>\n",
        "      <td>BOR</td>\n",
-       "      <td>8.0</td>\n",
        "      <td>7.0</td>\n",
-       "      <td>-2.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>-2.5</td>\n",
        "      <td>11</td>\n",
        "      <td>8</td>\n",
        "      <td>2025</td>\n",
        "      <td>1</td>\n",
        "      <td>79.558</td>\n",
        "      <td>0.227</td>\n",
-       "      <td>-2.0</td>\n",
+       "      <td>-1.0</td>\n",
        "      <td>False</td>\n",
        "      <td>27.0</td>\n",
        "      <td>44.0</td>\n",
@@ -4854,7 +4854,7 @@
        "      <td>HUL</td>\n",
        "      <td>12.0</td>\n",
        "      <td>11.0</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>2.5</td>\n",
        "      <td>11</td>\n",
        "      <td>8</td>\n",
        "      <td>2025</td>\n",
@@ -4914,22 +4914,22 @@
        "   Abbreviation  GridPosition  Grid_Gap_to_Pole  Quali_vs_Teammate  \\\n",
        "0           PIA           3.0               2.0                0.5   \n",
        "1           NOR           2.0               1.0               -0.5   \n",
-       "2           HAM           5.0               4.0                0.5   \n",
-       "3           LEC           4.0               3.0               -0.5   \n",
-       "4           RUS           6.0               5.0               -0.5   \n",
-       "5           ANT           7.0               6.0                0.5   \n",
+       "2           HAM          10.0               9.0                3.0   \n",
+       "3           LEC           4.0               3.0               -3.0   \n",
+       "4           RUS           5.0               4.0               -0.5   \n",
+       "5           ANT           6.0               5.0                0.5   \n",
        "6           LAW          20.0              19.0                2.0   \n",
        "7           HAD          16.0              15.0               -2.0   \n",
        "8           SAI          13.0              12.0               -0.5   \n",
        "9           ALB          14.0              13.0                0.5   \n",
-       "10          VER           1.0               0.0               -4.5   \n",
-       "11          TSU          10.0               9.0                4.5   \n",
-       "12          ALO           9.0               8.0               -4.0   \n",
-       "13          STR          17.0              16.0                4.0   \n",
+       "10          VER           1.0               0.0               -4.0   \n",
+       "11          TSU           9.0               8.0                4.0   \n",
+       "12          ALO           8.0               7.0               -4.5   \n",
+       "13          STR          17.0              16.0                4.5   \n",
        "14          BEA          11.0              10.0               -2.0   \n",
        "15          OCO          15.0              14.0                2.0   \n",
-       "16          BOR           8.0               7.0               -2.0   \n",
-       "17          HUL          12.0              11.0                2.0   \n",
+       "16          BOR           7.0               6.0               -2.5   \n",
+       "17          HUL          12.0              11.0                2.5   \n",
        "18          GAS          19.0              18.0                0.5   \n",
        "19          COL          18.0              17.0               -0.5   \n",
        "\n",
@@ -4958,21 +4958,21 @@
        "    Practice_Gap_to_Fastest  Practice_vs_Quali_Rank   Rain  AirTemp  \\\n",
        "0                     0.165                     0.0  False     27.0   \n",
        "1                     0.000                    -1.0  False     27.0   \n",
-       "2                     0.267                     2.0  False     27.0   \n",
+       "2                     0.267                    -3.0  False     27.0   \n",
        "3                     0.021                    -2.0  False     27.0   \n",
-       "4                     0.184                    -1.0  False     27.0   \n",
-       "5                     0.365                     2.0  False     27.0   \n",
+       "4                     0.184                     0.0  False     27.0   \n",
+       "5                     0.365                     3.0  False     27.0   \n",
        "6                     0.801                    -4.0  False     27.0   \n",
        "7                     0.272                    -8.0  False     27.0   \n",
        "8                     0.576                     0.0  False     27.0   \n",
        "9                     0.389                    -4.0  False     27.0   \n",
        "10                    0.167                     3.0  False     27.0   \n",
-       "11                    0.728                     5.0  False     27.0   \n",
-       "12                    0.530                     3.0  False     27.0   \n",
+       "11                    0.728                     6.0  False     27.0   \n",
+       "12                    0.530                     4.0  False     27.0   \n",
        "13                    0.916                     1.5  False     27.0   \n",
        "14                    0.878                     6.0  False     27.0   \n",
        "15                    0.973                     5.0  False     27.0   \n",
-       "16                    0.227                    -2.0  False     27.0   \n",
+       "16                    0.227                    -1.0  False     27.0   \n",
        "17                    0.406                    -1.0  False     27.0   \n",
        "18                    0.916                    -0.5  False     27.0   \n",
        "19                    0.703                    -4.0  False     27.0   \n",
@@ -5000,7 +5000,7 @@
        "19       44.0    1017.1     2.7778  "
       ]
      },
-     "execution_count": 115,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5043,12 +5043,12 @@
     "    'NOR': 2.0, \n",
     "    'PIA': 3.0,\n",
     "    'LEC': 4.0,\n",
-    "    'HAM': 5.0,\n",
-    "    'RUS': 6.0,       \n",
-    "    'ANT': 7.0,          \n",
-    "    'BOR': 8.0,\n",
-    "    'ALO': 9.0,    \n",
-    "    'TSU': 10.0,\n",
+    "    'RUS': 5.0,\n",
+    "    'ANT': 6.0,       \n",
+    "    'BOR': 7.0,          \n",
+    "    'ALO': 8.0,\n",
+    "    'TSU': 9.0,    \n",
+    "    'HAM': 10.0,\n",
     "    'BEA': 11.0,            \n",
     "    'HUL': 12.0,\n",
     "    'SAI': 13.0,\n",
@@ -5099,7 +5099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -5113,7 +5113,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5124,7 +5124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -5132,29 +5132,29 @@
      "output_type": "stream",
      "text": [
       "PREDICTIONS\n",
-      "[90.01096895 89.97137238 90.60882981 90.17332995 90.70744254 91.0953721\n",
-      " 92.48883164 92.03949621 92.15068049 92.01239219 90.48890429 91.55392372\n",
-      " 91.52084619 92.08864295 91.85746246 92.31103386 91.21251674 91.86339409\n",
+      "[90.01096895 89.97137238 90.866969   90.32051674 90.62637734 91.0143069\n",
+      " 92.48883164 92.03949621 92.15068049 92.01239219 90.45946694 91.50229589\n",
+      " 91.46921835 92.05920559 91.85746246 92.31103386 91.1608889  91.83395674\n",
       " 92.4041016  91.9912764 ]\n",
       "\n",
       "PREDICTED 2025 MONZA PODIUM\n",
       "===============================\n",
       "🥇 P1: NOR - 89.9713723797272s\n",
       "🥈 P2: PIA - 90.01096894712623s\n",
-      "🥉 P3: LEC - 90.17332995328934s\n",
+      "🥉 P3: LEC - 90.32051674327181s\n",
       "\n",
       "Full Results:\n",
       "  Driver  Predicted_LapTime\n",
       "0    NOR          89.971372\n",
       "1    PIA          90.010969\n",
-      "2    LEC          90.173330\n",
-      "3    VER          90.488904\n",
-      "4    HAM          90.608830\n",
-      "5    RUS          90.707443\n",
-      "6    ANT          91.095372\n",
-      "7    BOR          91.212517\n",
-      "8    ALO          91.520846\n",
-      "9    TSU          91.553924\n"
+      "2    LEC          90.320517\n",
+      "3    VER          90.459467\n",
+      "4    RUS          90.626377\n",
+      "5    HAM          90.866969\n",
+      "6    ANT          91.014307\n",
+      "7    BOR          91.160889\n",
+      "8    ALO          91.469218\n",
+      "9    TSU          91.502296\n"
      ]
     }
    ],
@@ -5202,19 +5202,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([90.01096895, 89.97137238, 90.60882981, 90.17332995, 90.70744254,\n",
-       "       91.0953721 , 92.48883164, 92.03949621, 92.15068049, 92.01239219,\n",
-       "       90.48890429, 91.55392372, 91.52084619, 92.08864295, 91.85746246,\n",
-       "       92.31103386, 91.21251674, 91.86339409, 92.4041016 , 91.9912764 ])"
+       "array([90.01096895, 89.97137238, 90.866969  , 90.32051674, 90.62637734,\n",
+       "       91.0143069 , 92.48883164, 92.03949621, 92.15068049, 92.01239219,\n",
+       "       90.45946694, 91.50229589, 91.46921835, 92.05920559, 91.85746246,\n",
+       "       92.31103386, 91.1608889 , 91.83395674, 92.4041016 , 91.9912764 ])"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5226,7 +5226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -5235,7 +5235,7 @@
        "0.8353183542393696"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5246,7 +5246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -5255,7 +5255,7 @@
        "Index(['Coefficients'], dtype='object')"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5269,7 +5269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -5380,7 +5380,7 @@
        "Pressure                     0.023769"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5391,7 +5391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
