Initialise Baku file

--- a/baku_prediction.ipynb
+++ b/baku_prediction.ipynb
@@ -14,7 +14,8 @@
     "- Consider classification using XGBClassifier, figure out hyperparams to prevent overfitting (hyperops)\n",
     "- OR regression using XGBoost on Baku data.\n",
     "- Add Qualifying Time\n",
-    "- Add average of race pace in qualifying sessions instead of best pace."
+    "- Add average of race pace in qualifying sessions instead of best pace.\n",
+    "- Convert podium predictor to string."
    ]
   },
   {
