Categorise tracks by downforce based on top speed calculation

--- a/prediction_notebooks/baku_prediction.ipynb
+++ b/prediction_notebooks/baku_prediction.ipynb
@@ -76,6 +76,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#We are not getting clean air race pace. We are getting the best pace from practice sessions\n",
+    "\n",
     "def get_clean_air_race_pace(year, race):\n",
     "    all_personal_bests = []\n",
     "    \n",
@@ -93,7 +95,7 @@
     "            'LapStartDate', 'Position', 'DeletedReason',\n",
     "            'FastF1Generated', 'IsAccurate'])\n",
     "\n",
-    "            laps = laps[(laps['TrackStatus']=='1') & (laps['Deleted']==False) & (laps.LapTime.notnull())]\n",
+    "            laps = laps[(laps['Deleted']==False) & (laps.LapTime.notnull())]\n",
     "            laps = laps.drop(columns=['Deleted','TrackStatus'])\n",
     "\n",
     "            # Find Personal Best for this session\n",
@@ -119,6 +121,37 @@
     "        return personalbest_map\n",
     "    else:\n",
     "        return pd.DataFrame()  # Empty if no data found"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "From categorise_by_downforce.py\n",
+    "\n",
+    "track_downforce_mapping = {\n",
+    "    'Monaco': 'Very High DF',\n",
+    "    'Canada': 'High DF',\n",
+    "    'Silverstone': 'High DF',\n",
+    "    'Imola': 'High DF',\n",
+    "    'Hungary': 'Medium DF',\n",
+    "    'Australia': 'Medium DF',\n",
+    "    'Bahrain': 'Medium DF',\n",
+    "    'Austria': 'Medium DF',\n",
+    "    'Netherlands': 'Medium DF',\n",
+    "    'Spain': 'Low DF',\n",
+    "    'Japan': 'Low DF',\n",
+    "    'Saudi Arabia': 'Low DF',\n",
+    "    'Baku': 'Very Low DF',\n",
+    "    'Belgium': 'Very Low DF',\n",
+    "    'Miami': 'Very Low DF',\n",
+    "    'Monza': 'Very Low DF',\n",
+    "}\n",
+    "\n",
+    "\"\"\""
    ]
   },
   {
